[GEOS-5283] Bin package will OOM after a few demo requests